tests/integration/tests/settings/ui/fail/non_secret_ref.stderr
error[E0308]: mismatched types
  --> tests/settings/ui/fail/non_secret_ref.rs:28:17
   |
28 |     accepts_secret(schema.database.default.host);
   |     -------------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `SecretFieldRef<..., ...>`, found `FieldRef<..., ...>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected struct `SecretFieldRef<CompileFailProjectSettings, SecretString>`
              found struct `FieldRef<CompileFailProjectSettings, std::string::String>`
note: function defined here
  --> tests/settings/ui/fail/non_secret_ref.rs:24:4
   |
24 | fn accepts_secret(_: SecretFieldRef<CompileFailProjectSettings, SecretString>) {}
   |    ^^^^^^^^^^^^^^ -----------------------------------------------------------
